# Rusty-Yubaba

./: Cargo.toml  README.md  shell.nix
assets/Picasso/: Picasso7.jfif  Picasso8.jfif
src/: core.rs  format.rs  main.rs  python.rs  totoro.rs  ui.rs
src/python/: convert.py  image.py  sound.py  video.py
