[package]
name = "Yubaba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26.2"
xkbcommon = { version = "0.7", features = ["x11"] }

[dependencies.pyo3]
version = "0.20.3"
features = ["auto-initialize"]
