[package]
name = "yubaba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
eframe = "0.26.2"
egui_extras = { version = "0.26.2", features = ["all_loaders"] }
image = { version = "0.25.0", features = ["gif"] }
rfd = "0.14.1"
#xkbcommon = { version = "0.7", features = ["x11"] }

[dependencies.pyo3]
version = "0.20.3"
features = ["auto-initialize"]
